tests/snapshots/run_wpt_conformance__coreml_dequantizeLinear_int8_0D_tensor_with_float32_0D_scale.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
dequantizeLinear.https.any.js dequantizeLinear int8 0D tensor with float32 0D scale, coreml
 Failed to dispatch graph: coreml runtime failed: input dtype mismatch: model expects 4-byte elements (code 65568), but input is Int8 (1-byte); type conversion is not supported for this input

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    dequantizeLinearInput: i8[];
  }

  consts {
    operand_1: f32[] @bytes([42, 101, 143, 63]);
    operand_2: i8[] @bytes([3]);
  }

  nodes {
    [dequantizeLinearOutput] = dequantizeLinear(dequantizeLinearInput, operand_1, operand_2, label="");
  }

  outputs { dequantizeLinearOutput; }
}
