tests/snapshots/run_wpt_conformance__coreml_dequantizeLinear_uint4_4D_tensor_with_broadcasting_float32_4D_scale_and_uint4_4D_zeroPoint.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
dequantizeLinear.https.any.js dequantizeLinear uint4 4D tensor with broadcasting float32 4D scale and uint4 4D zeroPoint, coreml
 Failed to build graph: graph conversion failed for coreml: int4/uint4 tensors are not supported in CoreML conversion yet

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    dequantizeLinearInput: u4[1, 1, 2, 2];
  }

  consts {
    operand_1: f32[1, 1, 2, 1] @bytes([79, 125, 21, 65, 41, 191, 147, 64]);
    operand_2: u4[1, 1, 2, 1] @bytes([35]);
  }

  nodes {
    [dequantizeLinearOutput] = dequantizeLinear(dequantizeLinearInput, operand_1, operand_2, label="");
  }

  outputs { dequantizeLinearOutput; }
}
