tests/snapshots/run_wpt_conformance__coreml_dequantizeLinear_uint8_1D_tensor_with_float16_1D_scale.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
dequantizeLinear.https.any.js dequantizeLinear uint8 1D tensor with float16 1D scale, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type dequantize: For operator: dequantize, when `scale` and `zero_point`(if provided) are vectors, `axis` should be present.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    dequantizeLinearInput: u8[4];
  }

  consts {
    operand_1: f16[4] @bytes([172, 72, 123, 52, 158, 68, 123, 60]);
    operand_2: u8[4] @bytes([128, 128, 128, 128]);
  }

  nodes {
    [dequantizeLinearOutput] = dequantizeLinear(dequantizeLinearInput, operand_1, operand_2, label="");
  }

  outputs { dequantizeLinearOutput; }
}
